# unit_tests_example

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build_and_test.sh  travis.sh
gtest/: sorting_and_searching_test.cpp
include/: SortSearch.hpp
lib/googletest-1.8.0/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-1.8.0/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-1.8.0/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: sorting_and_searching.cpp
test/: sorting_and_searching_test.cpp
